--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "sass": "^1.56.1",
+        "sass": "^1.66.1",
         "tailwindcss": "^3.0.18",
         "vite": "^4.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2"
     }
 }
