--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.4.2"
+        "@fortawesome/fontawesome-free": "^6.4.2",
+        "sweetalert2": "^11.7.28"
     }
 }
